# sheetlens

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/skills/finish-project-issue/: SKILL.md
.agents/skills/process-project-backlog/: SKILL.md
.agents/skills/promote-ready-project-issues/: SKILL.md
.agents/skills/select-next-project-issue/: SKILL.md
.codex/: config.toml  hooks.json
.codex/hooks/: stop_git_completion.py
.github/workflows/: quality.yml  windows-xlsm.yml
docs/project/: README.md  backlog.md  roadmap.md
docs/project/items/: SL-001-stable-question-ids.md  SL-002-annotation-schema.md  SL-003-typed-element-ids.md  SL-004-compiled-semantics.md  SL-005-defined-name-validations.md  SL-006-conditional-format-ir.md  SL-007-cell-display-semantics.md  SL-008-artifact-presence.md  SL-009-structural-range.md  SL-010-vml-buttons.md  SL-011-input-formula-regions.md  SL-012-formula-dependency-parser.md  SL-013-atomic-extract-cli-errors.md  SL-014-real-xlsm-windows.md  SL-015-reproducible-evaluation.md  SL-016-golden-ci-quality.md  SL-017-package-repository-hygiene.md  SL-018-autonomous-git-completion.md  SL-019-process-project-backlog.md  SL-020-completion-state-authority.md  SL-021-sequential-state-updates.md  SL-022-owner-lifecycle.md  SL-023-stop-hook-responsibility.md  SL-024-ci-quality-gate-regression.md  SL-025-validation-rule-ir-fidelity.md  SL-026-compile-atomic-update.md  SL-027-workbook-resource-cleanup.md  SL-028-sheet-local-defined-name-dependencies.md
docs/qa/: windows-xlsm-acceptance.md
docs/superpowers/plans/: 2026-07-07-sheetlens-v1.md  2026-07-10-initial-improvement-backlog.md  2026-07-10-project-management-foundation.md  2026-07-10-select-next-project-issue-skill.md  2026-07-10-stable-question-ids.md  2026-07-11-artifact-presence.md  2026-07-11-atomic-extract-cli-errors.md  2026-07-11-autonomous-git-completion.md  2026-07-11-cell-display-semantics.md  2026-07-11-conditional-format-ir.md  2026-07-11-defined-name-validations.md  2026-07-11-formula-dependency-parser.md  2026-07-11-input-formula-regions.md  2026-07-11-process-project-backlog.md  2026-07-11-real-xlsm-windows.md  2026-07-11-structural-range.md  2026-07-11-vml-buttons.md  2026-07-12-annotation-schema.md  2026-07-12-completion-state-authority.md  2026-07-12-golden-ci-quality.md  2026-07-12-owner-lifecycle.md  2026-07-12-package-repository-hygiene.md  2026-07-12-ready-promotion-harness.md
docs/superpowers/specs/: 2026-07-07-sheetlens-design.md  2026-07-10-select-next-project-issue-skill-design.md  2026-07-10-sheetlens-project-management-design.md  2026-07-10-stable-question-ids-design.md  2026-07-11-conditional-format-ir-design.md  2026-07-11-defined-name-validations-design.md
eval/: README.md  make_dummy.py  questions.yaml
scripts/: check_project_state.py  promote_ready_issues.py  wheel_smoke.py
src/sheetlens/: cli.py  formulas.py  pipeline.py  question_ids.py
src/sheetlens/annotations/: schema.py
src/sheetlens/detectors/: formula_patterns.py  (+3 more)
tests/: conftest.py  test_annotations.py  test_check_e2e.py  test_cli.py  test_compile_e2e.py  test_eval_dummy.py  test_extract_e2e.py  test_features.py  test_formula_patterns.py  test_formulas.py  test_git_completion_hook.py  test_ir.py  test_machine.py  test_markdown.py  test_project_state.py  test_promote_ready_issues.py  test_question_ids.py  test_questions.py  test_reader.py  test_regions.py  test_vba.py  test_xlsm_e2e.py
tests/golden/: test_deterministic_outputs.py
(+18 files in other folders)
