[project]
name = "sheetlens"
version = "0.1.0"
description = "AI エージェントのための Excel 理解支援ツール"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "oletools>=0.60",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
sheetlens = "sheetlens.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sheetlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # oletools が import 時に出す pyparsing の非推奨警告（第三者ライブラリ由来）のみ抑制
    "ignore:::oletools\\.olevba",
]

[tool.ruff]
line-length = 100
