[project]
name = "sheetlens"
version = "0.1.0"
description = "AI エージェントのための Excel 理解支援ツール"
readme = "README.md"
authors = [{ name = "tonny-lec" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "oletools>=0.60",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
sheetlens = "sheetlens.cli:app"

[project.urls]
Homepage = "https://github.com/tonny-lec/sheetlens"
Repository = "https://github.com/tonny-lec/sheetlens"
Issues = "https://github.com/tonny-lec/sheetlens/issues"

[dependency-groups]
dev = ["mypy>=1.13", "pytest>=8.0", "pytest-cov>=6.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sheetlens"]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/pyproject.toml", "/src"]
ignore-vcs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # oletools が import 時に出す pyparsing の非推奨警告（第三者ライブラリ由来）のみ抑制
    "ignore:::oletools\\.olevba",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["oletools.*", "openpyxl.*", "yaml.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/sheetlens"]

[tool.coverage.report]
skip_empty = true
